--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -93,15 +93,15 @@ layout: default
               {% case data[0] %}
                 {% when 'basics' %}
                   {% include resume/basics.liquid %}
-                {% when 'education' %}
+                {% when 'Education' %}
                   {% include resume/education.liquid %}
-                {% when 'work' %}
-                  {% include resume/work.liquid %}
-                {% when 'volunteer' %}
-                  {% include resume/volunteer.liquid %}
-                {% when 'projects' %}
+                {% when 'Research Internship' %}
+                  {% include resume/research_internship.liquid %}
+                {% when 'Leadership' %}
+                  {% include resume/leadership.liquid %}
+                {% when 'Projects' %}
                   {% include resume/projects.liquid %}
-                {% when 'awards' %}
+                {% when 'Honor and Awards' %}
                   {% include resume/awards.liquid %}
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
